@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.646 2005-03-04 17:01:11 castaglia Exp $
+$Id: NEWS,v 1.647 2005-03-05 17:33:29 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -117,6 +117,7 @@ CVS
 - Bug 2331 - ProFTPD does not honor POSIX ACLs.  Please read the README.facl
   file for more information on POSIX ACL support in ProFTPD.
 - Bug 2573 - TLSProtocol directive in proftpd.conf is ignored.
+- Bug 2559 - IPv6 socket option should be set for ServerType inetd.
 
 1.2.10 - Released 04-Sep-2004
 --------------------------------
